# libtasmota

./: CMakeLists.txt  Doxyfile  README.md
include/: HttpClient.hpp  Json.hpp  JsonCpp.hpp  JsonCppWrapper.hpp  Logger.hpp  TasmotaAPI.hpp  Url.hpp
src/: HttpClient.cpp  Json.cpp  Logger.cpp  TasmotaAPI.cpp  Test.cpp  Url.cpp
